--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-location": "^3.3.4",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "typewriter-effect": "^2.21.0",
