--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal-portfolio",
-  "homepage": "https://doriswz.github.io",
+  "homepage": "https://doriswzhang.github.io/doriswz.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
