--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal-portfolio",
-  "homepage": "https://doriswzhang.github.io/doriswzhang.github.io",
+  "homepage": "https://doriswzhang.github.io",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
