--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal-portfolio",
-  "homepage": "https://doriswzhang.github.io",
+  "homepage": "https://doriswzhang.github.io/doriswzhang.github.io",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
@@ -10,7 +10,6 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-location": "^3.3.4",
@@ -21,7 +20,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
